--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <!-- Auto-playing audio -->
   <audio autoplay loop>
-    <source src="AQO_qxCOhVblLcc1vdhZw2TzVPavgBZJqspHrDAi1y9AzOr89A8l1MIDAUZes5ESUDvYy9PRULSsIKGj0F-lrP-s.mp3" type="audio/mpeg">
+    <source src="AQO_qxCOhVblLcc1vdhZw2TzVPavgBZJqspHrDAi1y9AzOr89A8l1MIDAUZes5ESUDvYy9PRULSsIKGj0F-lrP-s.mp3" type="audio/mp3">
     Your browser does not support the audio element.
   </audio>
 
